force-app/main/default/objects/Annual_Household_Information__c.object
<CustomObject>
    <description>Household data that is specific to a school year is stored on the Annual Household Information object. All records will include a school year code to indicate what year the record applies for. There may be multiple Annual Household Information records for a single Program Enrollment to track data across multiple years.</description>
    <fields>
        <fullName>Calculator_Hardship__c</fullName>
        <description>Calculator Hardship Status</description>
        <label>Calculator Hardship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved - Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caretaker_Id__c</fullName>
        <description>This field is used to capture the Caretaker FirstName and Last Name and used in Form Assembly Form Pre-fill Lookup as part of US # 334973 &amp; 334974</description>
        <formula>Program_Enrollment__r.hed__Contact__r.FirstName &amp; &apos; &apos; &amp; Program_Enrollment__r.hed__Contact__r.LastName</formula>
        <label>Caretaker Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EU_and_W_Number_Waived_Computers__c</fullName>
        <description>The number of computers declined int he case of the family is enrolling multiple students and does not want to receive a computer for each student.</description>
        <label>EU and W Number Waived Computers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Poverty_Eligibility__c</fullName>
        <description>Federal Poverty Eligibility</description>
        <label>Federal Poverty Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualifies at Federal Poverty Level</fullName>
                </value>
                <value>
                    <fullName>Does not qualify at Federal Poverty Level</fullName>
                </value>
                <value>
                    <fullName>Not enough information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foster_Child_Enrolling__c</fullName>
        <description>Is the ward of the court or foster child enrolled or enrolling in this school?</description>
        <label>Foster Child Enrolling</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHFosterChild__c</fullName>
        <description>Is child a ward of the court or foster child</description>
        <label>Foster child</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decline to disclose</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HHHasFoodStampCaseNumberc__c</fullName>
        <description>The SNAP, FDPIR, or TANF case number for the family.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HH Has Food Stamp Case Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHLast4DigitsSignerSSN__c</fullName>
        <description>Last four digits of signer’s Social Security Number (SSN)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HH_Last_4_Digits_Signer_SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HHSignerDoesNotHaveSSN__c</fullName>
        <description>The primary caretaker does not have a Social Security Number</description>
        <label>HH_Signer_Does_Not_Have_SSN</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I do not have a Social Security Number.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH_Has_Food_Stamp_Case_Number__c</fullName>
        <description>The SNAP, FDPIR, or TANF case number for the family.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HH Has Food Stamp Case Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Has_Food_Stamp_Recipient__c</fullName>
        <description>Does any member of the household receive SNAP, FDPIR, or TANF?</description>
        <label>HH Has Food Stamp Recipient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Decline to disclose</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH_Has_Foster_Children__c</fullName>
        <description>Is one or more student(s) in this household a ward of the court or a foster child?</description>
        <label>HH Has Foster Children</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HH_Income_Foster_Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Would the family like to receive a loaned calculator?</description>
        <label>HH Income Foster Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HH_Last_4_Digits_Signer_SSN__c</fullName>
        <description>Last four digits of signer’s Social Security Number (SSN)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>HH_Last_4_Digits_Signer_SSN</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HH_Signer_Does_Not_Have_SSN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The primary caretaker does not have a Social Security Number</description>
        <label>HH_Signer_Does_Not_Have_SSN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_FARM_Eligibility__c</fullName>
        <description>Household FARM Eligibility</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Household FARM Eligibility</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_FARM_Received__c</fullName>
        <description>FARM Form Received for Household</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Secondary Priority for Review</inlineHelpText>
        <label>Household FARM Received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Income_Form_Submission_Ack__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture Income Form Submission Ack and created as part of US # 334973</description>
        <label>Income Form Submission Ack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Income_Form_Submission_Ack_old__c</fullName>
        <description>This field is used to capture Income Form Submission Ack and created as part of US # 334973</description>
        <label>Income Form Submission Ack old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Form_Submission_Date__c</fullName>
        <description>This field is used to capture Income Form Submission Date and created as part of US # 334973</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income Form Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Income_Form_Submitter__c</fullName>
        <description>This field is used to capture Income Form Submitter and created as part of US # 334973</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Income Form Submitter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Income_Opt_Out_Options__c</fullName>
        <description>Indication of participation in the household income survey</description>
        <label>Income Opt Out</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I certify that our household does not qualify</fullName>
                    <label>I certify that our household does not qualify because our total annual income is above $100,000.</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <label>Yes - I will submit my household&apos;s information.</label>
                </value>
                <value>
                    <fullName>I choose not to provide my income information</fullName>
                    <label>I choose not to provide my income information. I understand that this decision may impact the Title I funding available for providing additional programs, benefits, and services for my student(s)&apos;s school.</label>
                </value>
                <value>
                    <fullName>I choose not to provide my income information and know this may impact the school’s Title I funding</fullName>
                    <isActive>false</isActive>
                    <label>I choose not to provide my income information and know this may impact the school’s Title I funding</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberCalculatorsProvided__c</fullName>
        <description>Number of calculators provided to the household</description>
        <label>Number_Calculators_Provided</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_HH_Adults__c</fullName>
        <description>Total number of adults in the household</description>
        <label>Number of Household Adults</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_HH_Children__c</fullName>
        <description>Total number of children in the household</description>
        <label>Number of Household Children</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_HH_Members__c</fullName>
        <description>Total number of household members, including children.</description>
        <label>Number of Household Members</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ORCAISPRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The caretaker would like to receive the Internet subsidy payment and will complete any additional steps necessary to confirm that they qualify to receive this payment</description>
        <label>ORCA_ISP_Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Enrollment__c</fullName>
        <label>Program Enrollment</label>
        <referenceTo>hed__Program_Enrollment__c</referenceTo>
        <relationshipLabel>Annual Household Information</relationshipLabel>
        <relationshipName>Annual_Household_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receive_Equip_Hardship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The caretaker is requesting that the school provide equipment and will complete any additional steps necessary to confirm that they qualify to receive equipment</description>
        <label>Receive Equip Hardship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Equip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been deprecated in favor of Receive_Equipment__c</description>
        <label>zReceive Equip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Equipment__c</fullName>
        <label>Receive Equipment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I am requesting that my school provide equipment and will complete any additional steps (grades K-5 only) necessary to confirm that I qualify to receive equipment.</fullName>
                </value>
                <value>
                    <fullName>I will use my own equipment in order to help my school fund other programs.</fullName>
                </value>
                <value>
                    <fullName>I am requesting that my school provide equipment and will complete any additional steps (grades 9-12) necessary to confirm that I qualify to receive equipment.</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Year</label>
        <referenceTo>School_Year__c</referenceTo>
        <relationshipLabel>Annual Household Information</relationshipLabel>
        <relationshipName>Annual_Household_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_Act_Status__c</fullName>
        <description>Program Enrollment record status</description>
        <formula>ISPICKVAL( Program_Enrollment__r.Status__c, &apos;In Progress&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Act Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technology_Hardship__c</fullName>
        <description>Status of family&apos;s technology hardship application</description>
        <label>Technology Hardship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approved - Hardship 1819</fullName>
                </value>
                <value>
                    <fullName>Approved - ISP only</fullName>
                </value>
                <value>
                    <fullName>Approved - Ordered</fullName>
                </value>
                <value>
                    <fullName>Approved - Substantiated</fullName>
                </value>
                <value>
                    <fullName>Approved - Substantiated and Ordered</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Denied - Amounts do not match</fullName>
                </value>
                <value>
                    <fullName>Denied - Hardship 1819</fullName>
                </value>
                <value>
                    <fullName>Denied - Not Substantiated</fullName>
                </value>
                <value>
                    <fullName>Hardship Application Received/Under Review</fullName>
                </value>
                <value>
                    <fullName>Need Documentation to Substantiate</fullName>
                </value>
                <value>
                    <fullName>Pending-Income form Missing/Invalid</fullName>
                </value>
                <value>
                    <fullName>Technology Hardships Limit Reached</fullName>
                </value>
                <value>
                    <fullName>Approved - Hardship</fullName>
                    <isActive>false</isActive>
                    <label>Approved - Hardship</label>
                </value>
                <value>
                    <fullName>Denied - Hardship</fullName>
                    <isActive>false</isActive>
                    <label>Denied - Hardship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Gross_HH_Income__c</fullName>
        <label>Total Gross HH Income</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>V2_External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>V2 External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>WaiveSomeEquip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Caretaker wished to decline some of the equipment allotted to your household</description>
        <label>Waive_Some_Equip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WhichEquipWaived__c</fullName>
        <description>Indication of which equipment the caretaker wishes to waive.</description>
        <label>Which_Equip_Waived</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop for my K-8 household</fullName>
                </value>
                <value>
                    <fullName>Laptop(s) for my 9-12th grade student(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testpicklistfield__c</fullName>
        <label>testpicklistfield</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Annual Household Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AHI-{0000}</displayFormat>
        <label>Annual Household Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Household Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>