force-app/main/default/objects/Annual_Household_Information__c/fields/Computer_Each__c.field-meta.xml
<CustomField>
    <fullName>Computer_Each__c</fullName>
    <label>Computer Each</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>